--- a/config/matrix-appservice-irc/config.yaml
+++ b/config/matrix-appservice-irc/config.yaml
@@ -26,7 +26,7 @@ ircService:
       sendConnectionMessages: true
 
       botConfig:
-        enabled: true
+        enabled: false
         nick: "qipl-matrix"
         password: "\ircBotPassword"
         joinChannelsIfNoUsers: false
@@ -53,7 +53,7 @@ ircService:
       ircClients:
         nickTemplate: "$DISPLAY[q]"
         allowNickChanges: true
-        maxClients: 150
+        maxClients: 300
 
       # NOTICE: this section is supposedly not necessary,
       # but the appservice WILL NOT RUN without it
