--- a/config/matrix-synapse/log.yaml
+++ b/config/matrix-synapse/log.yaml
@@ -32,11 +32,11 @@ handlers:
 
 loggers:
     synapse:
-        level: INFO
+        level: WARN
 
     synapse.storage.SQL:
-        level: INFO
+        level: WARN
 
 root:
-    level: INFO
+    level: WARN
     handlers: [file, journal]
