--- a/config/riot-web/config.json
+++ b/config/riot-web/config.json
@@ -2,34 +2,23 @@
     "default_hs_url": "https://matrix.qipl.org",
     "default_is_url": "https://matrix.qipl.org",
     "disable_custom_urls": false,
-    "disable_guests": false,
+    "disable_guests": true,
     "disable_login_language_selector": false,
-    "disable_3pid_login": false,
+    "disable_3pid_login": true,
     "brand": "matrix.qipl.org",
-    "integrations_ui_url": "https://scalar.vector.im/",
-    "integrations_rest_url": "https://scalar.vector.im/api",
-    "integrations_jitsi_widget_url": "https://scalar.vector.im/api/widgets/jitsi.html",
     "bug_report_endpoint_url": "https://riot.im/bugreports/submit",
-    "features": {
-        "feature_groups": "labs",
-        "feature_pinning": "labs"
-    },
     "default_federate": true,
     "welcomePageUrl": "home.html",
     "default_theme": "dark",
     "roomDirectory": {
         "servers": [
+            "matrix.qipl.org",
             "matrix.org"
         ]
     },
     "welcomeUserId": "@riot-bot:matrix.org",
-    "piwik": {
-        "url": "https://piwik.riot.im/",
-        "whitelistedHSUrls": ["https://matrix.org"],
-        "whitelistedISUrls": ["https://vector.im", "https://matrix.org"],
-        "siteId": 1
-    },
+    "piwik": false,
     "enable_presence_by_hs_url": {
-        "https://matrix.org": false
+        "https://matrix.org": true
     }
 }
