Added new channels to IRC bridge.

--- a/config/matrix-appservice-irc/config.yaml
+++ b/config/matrix-appservice-irc/config.yaml
@@ -44,6 +44,8 @@ ircService:
             incremental: true
 
       mappings:
+        "##programminglanguages": ["!BVHhKSVoFdUqfCRVJS:matrix.qipl.org"]
+        "#programminglanguages": ["!tgXrXRVCKqimmoEzPY:matrix.qipl.org"]
         "#proglangdesign": ["!buMmDyUoEScSqZbIyH:matrix.qipl.org"]
         "#qipl": ["!hGhxOgfPgXsGcQiMlo:matrix.qipl.org"]
 
