--- a/config/matrix-appservice-irc/config.yaml
+++ b/config/matrix-appservice-irc/config.yaml
@@ -20,34 +20,32 @@ ircService:
       # I think it might be trying to use an incorrect username, but I'm not sure.
       # However, I don't think this is all that big of a deal for now.
       # I'll have to look into fixing this later.
-      sasl: true
+      sasl: false
       allowExpiredCerts: false
 
       sendConnectionMessages: true
 
       botConfig:
-        enabled: false
+        enabled: true
         nick: "qipl-matrix"
         password: "\ircBotPassword"
-        joinChannelsIfNoUsers: false
+        joinChannelsIfNoUsers: true
 
       membershipLists:
         enabled: true
 
         global:
           ircToMatrix:
-            initial: true
+            initial: false
             incremental: true
 
           matrixToIrc:
-            initial: true
+            initial: false
             incremental: true
 
       mappings:
         "##programminglanguages": ["!BVHhKSVoFdUqfCRVJS:matrix.qipl.org"]
-        "#programminglanguages": ["!tgXrXRVCKqimmoEzPY:matrix.qipl.org"]
         "#proglangdesign": ["!buMmDyUoEScSqZbIyH:matrix.qipl.org"]
-        "#qipl": ["!hGhxOgfPgXsGcQiMlo:matrix.qipl.org"]
 
       matrixClients:
         userTemplate: "@irc_$NICK"
