Moved service to a new host.

--- a/config/matrix-appservice-discord/config.yaml
+++ b/config/matrix-appservice-discord/config.yaml
@@ -1,7 +1,7 @@
 bridge:
   domain: "matrix.qipl.org"
   homeserverUrl: "http://localhost:8008"
-  enableSelfServiceBridging: true
+  enableSelfServiceBridging: false
   disableEveryoneMention: true
   disableHereMention: true
 
